change in getting tx annotation to also get transcripts, no longer pass db_object to other downstream trackview or browser_ly functions
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@196358 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/vignettes/Carrol_Example_Vignette.Rmd
+++ b/trunk/vignettes/Carrol_Example_Vignette.Rmd
@@ -6,7 +6,7 @@ output: html_document
 
 ```{r setup, include=FALSE, echo=TRUE}
 knitr::opts_chunk$set(echo = TRUE, cache=TRUE, autodep=TRUE)
-library(gChipseq)
+#library(gChipseq)
 library(chipVis)
 library(TxDb.Hsapiens.BioMart.igis3.0)
 library(plotly)
@@ -72,7 +72,7 @@ sig <- which(apply(results,1, function(x) sum(x!=0) > 0))
 
 rna_hm <- genomics_heatmap(v$E[sig,], col_groups = treat_groups,
             x = pData(T47D_eset)$title, y = fData(T47D_eset)$symbol[sig],
-            name = "RNA-seq",cbg = colorbar_grid(x_spacing = 0.3)) 
+            name = "RNA-seq",cbg = colorbar_grid(x_spacing = 0.3, nrow = 2)) 
 
 # rna_hm %>% plot_iHeatmap() %>% layout(margin = list(b = 250)) %>% export(file = "/gne/research/workspace/schepa/Carroll_Data/Figures/rna_hm.pdf")
 
