interactive poster visualizations; pass buffer argument properly in rna_heatmap
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@196379 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/vignettes/Carrol_Example_Vignette.Rmd
+++ b/trunk/vignettes/Carrol_Example_Vignette.Rmd
@@ -435,5 +435,5 @@ plot_browserly_tracks(symbol_range, tx_data, range_cvg, binsize = 100)
 
 ```{r}
 cvg_subset <- c('PR_ab_Pr_treat1', 'PR_ab5')
-plot_browserly_tracks(symbol_range, tx_data, range_cvg[cvg_subset], binsize=100)
+plot_browserly_tracks(range = symbol_range, tx_data = tx_data, cvg_list = range_cvg[cvg_subset], binsize=100)
 ```
