--- a/trunk/vignettes/interactive_poster.Rmd
+++ b/trunk/vignettes/interactive_poster.Rmd
@@ -7,7 +7,7 @@ runtime: shiny
 ---
 
 ```{r setup, include=FALSE, echo=TRUE}
-knitr::opts_chunk$set(echo = TRUE, cache=TRUE, autodep=TRUE)
+knitr::opts_chunk$set(echo = TRUE, cache=TRUE, autodep=TRUE, warning = FALSE, message = FALSE)
 #library(gChipseq)
 library(chipVis)
 library(TxDb.Hsapiens.BioMart.igis3.0)
@@ -41,7 +41,7 @@ tss_ranges <- with(fData(rpkmEset), GenomicRanges::GRanges(chr,
 
 ```
   
- 
+
 ```{r, echo = FALSE}
 T47D_eset <- rpkmEset[,grep("T47D",pData(rpkmEset)$celltype)]
 treat_groups = stringr::str_trim(sapply(stringr::str_split(pData(T47D_eset)$treatment,":"), 
@@ -81,33 +81,34 @@ T47D = list(
   p300_ab_R5020_treat = which(fi$source_name == "T47D_p300_R5020_3hr")
   
 )
+col_group_names <- gsub(pattern = "Progesterone", replacement = "P4", treat_groups)
 
 ```
 
+# Interactive RNA Heatmap
+ 
+Heatmap showing relative RNA expression across samples treated with E2 (estrogen), E2 plus P4 (progesterone), or E2 plus R5020 (synthetic P4). 
+
 ```{r}
-col_group_names <- gsub(pattern = "Progesterone", replacement = "P4", treat_groups)
-rna_hm <- genomics_heatmap(v$E[sig,], col_groups = col_group_names, row_k = 2,
-            x = pData(T47D_eset)$title, y = fData(T47D_eset)$symbol[sig], 
-            name = "RNA-seq", cbg = colorbar_grid(x_spacing = 0.2, nrow = 3),
-            colorscale = diverging_colorscale(c(scales::muted("blue"),"white",scales::muted("red")))) 
+rna_hm <- genomics_heatmap(v$E[sig,], 
+                           col_groups = col_group_names, 
+                           row_groups_palette = c("#832424","#3A3A98"),
+                           row_groups_name = "Gene<br>Clusters",
+                           row_k = 2,
+                           x = pData(T47D_eset)$title, 
+                           y = fData(T47D_eset)$symbol[sig],
+                           name = "RNA-seq", cbg = colorbar_grid(x_spacing = 0.2, nrow = 3),
+                           colorscale = diverging_colorscale(c(scales::muted("blue"),
+                                                "white",
+                                                scales::muted("red")))) 
 
 rna_hm
 ```
 
 
   
-#Get T47D Progesterone  
-```{r T47D_tss_cvg}
 
-tss_cvg_mats <- lapply(T47D, function(x){
-  tmp <- make_coverage_matrix(inputs = fi$File.bam[x],
-                                  ranges = tss_ranges[sig],
-                                  binsize = 100,
-                                  up = 5000,
-                                  down = 5000)
-  out <- Reduce("+", tmp) / length(tmp)
-  return(out)
-})
+```{r T47D_tss_cvg, echo = FALSE}
 
 promoter_ranges = GenomicRanges::promoters(tss_ranges,
                                                  up = 5000,
@@ -229,10 +230,19 @@ rna_chip_collapsed_hm <- rna_hm %>%
                  colorscale = continuous_colorscale("Greys"), 
                  show_colorbar = FALSE,
                  zmin = untreated_range[1], 
-                 zmax = untreated_range[2]) %>%
-  plot_iHeatmap() %>% layout(margin = list(l=0, t=0))
+                 zmax = untreated_range[2]) #%>%
+  #plot_iHeatmap() %>% layout(margin = list(l=0, t=0))
 
 ```
+
+# Add ChIP-seq data to RNA heatmap
+
+We can add the differential ChIP peaks for P4 and R5020 treatment for several factors (ER, PR, and p300) next to the RNA heatmap.  Each row of the ChIP heatmaps represents the differential ChIP signal in a 10000 bp window around the transcription start site of the matching gene in the RNA-seq heatmap.
+
+```{r}
+rna_chip_collapsed_hm 
+```
+
 
 
 ```{r Match transcripts with symbol, echo = FALSE}
@@ -265,12 +275,32 @@ range_cvg <- Reduce(c, range_cvg)
 
 ```
 
+# Individual gene views
+
+We can also look at the ChIP-seq signal around a particular gene of interest.  If looking at many ChIP-seq samples, we can plot the coverage as a heatmap.
+
 ```{r}
 plot_browserly_tracks(symbol_range, tx_data, range_cvg, binsize = 100)
 ```
 
+If we want to focus in on just a couple ChIP-seq samples, we can make a line plot instead. 
 
 ```{r}
 cvg_subset <- c('PR_ab_Pr_treat1', 'PR_ab5')
 plot_browserly_tracks(symbol_range, tx_data, range_cvg[cvg_subset], binsize=100)
 ```
+
+# Linking the heatmap with the individual view
+
+```{r, cache = FALSE, echo = FALSE}
+link_function <- heatmap_click(rna_chip_collapsed_hm, tss_ranges[sig])
+
+bw_files <- fi$File.bw[unlist(T47D)]
+names(bw_files) <- sapply(1:length(T47D), function(i) paste0(rep(names(T47D)[[i]], length(T47D[[i]])), seq_along(T47D[[i]])))
+track_function <- make_browserly_function(bw_files, tx_data)
+
+heatmap_to_browserly_shiny(rna_chip_collapsed_hm, track_function, link_function)
+
+
+```
+
